--- a/index.html
+++ b/index.html
@@ -2,167 +2,127 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PennyQuest</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Courier New', monospace;
       color: white;
       background: black;
-      overflow: hidden;
+      overflow-x: hidden;
     }
-    .milkyway {
+
+    canvas {
       position: fixed;
-      width: 100%;
-      height: 100%;
+      top: 0;
+      left: 0;
       z-index: -1;
-      background: radial-gradient(ellipse at center, #111 0%, #000 100%);
     }
-    .star {
-      position: absolute;
-      background: white;
-      border-radius: 50%;
-      animation: twinkle 2s infinite ease-in-out;
-    }
-    @keyframes twinkle {
-      0%, 100% { opacity: 0.3; }
-      50% { opacity: 1; }
-    }
+
     .container {
+      max-width: 800px;
+      margin: 0 auto;
       padding: 2rem;
-      max-width: 600px;
-      margin: auto;
       text-align: center;
     }
-    button {
-      margin: 0.5rem;
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      cursor: pointer;
-      background-color: #222;
-      color: #fff;
-      border: 1px solid #555;
-      border-radius: 5px;
+
+    .challenge {
+      margin-bottom: 3rem;
     }
-    .option-btn {
+
+    .options button {
       display: block;
       width: 100%;
-      margin: 0.5rem 0;
+      margin: 0.5rem auto;
+      padding: 0.75rem;
+      font-size: 1rem;
+      border-radius: 10px;
+      background-color: rgba(255, 255, 255, 0.1);
+      color: white;
+      border: 1px solid white;
+      cursor: pointer;
+    }
+
+    .flag-container img {
+      max-width: 100%;
+      max-height: 150px;
+      object-fit: contain;
+      display: block;
+      margin: 0 auto 1rem;
     }
   </style>
 </head>
 
 <body>
-  <div class="milkyway" id="milkyway"></div>
+  <canvas id="stars"></canvas>
   <div class="container">
     <h1>PennyQuest</h1>
-    <div id="menu">
-      <button onclick="startGame('flags')">Flags</button>
-      <button onclick="startGame('geography')">Geography</button>
-      <button onclick="startGame('history')">History</button>
+
+    <div class="challenge" id="category">
+      <h2>Choose a Challenge:</h2>
+      <button onclick="startGeography()">Geography</button>
+      <button onclick="startFlagQuiz()">Flags</button>
+      <button onclick="startHistory()">History</button>
     </div>
 
-    <div id="game" style="display:none">
-      <h2 id="question"></h2>
-      <img id="flag-image" src="" style="max-width: 300px; display:none"><br>
-      <div id="options"></div>
-      <p id="result"></p>
-      <p>Pennies: <span id="score">0</span></p>
-      <button onclick="showMenu()">Back to Menu</button>
+    <div class="challenge" id="quiz" style="display: none;">
+      <div id="question"></div>
+      <div class="flag-container" id="flag"></div>
+      <div class="options" id="options"></div>
     </div>
   </div>
 
   <script>
-    const milkyway = document.getElementById('milkyway');
-    for (let i = 0; i < 200; i++) {
-      const star = document.createElement('div');
-      star.className = 'star';
-      star.style.width = star.style.height = `${Math.random() * 2 + 1}px`;
-      star.style.left = `${Math.random() * 100}%`;
-      star.style.top = `${Math.random() * 100}%`;
-      star.style.animationDelay = `${Math.random() * 2}s`;
-      milkyway.appendChild(star);
-    }
+    const countryCodes = {
+      ad: "Andorra", ae: "United Arab Emirates", af: "Afghanistan", ag: "Antigua and Barbuda",
+      ai: "Anguilla", al: "Albania", am: "Armenia", ao: "Angola", aq: "Antarctica", ar: "Argentina",
+      as: "American Samoa", at: "Austria", au: "Australia", aw: "Aruba", ax: "Åland Islands",
+      az: "Azerbaijan", ba: "Bosnia and Herzegovina", bb: "Barbados", bd: "Bangladesh", be: "Belgium",
+      bf: "Burkina Faso", bg: "Bulgaria", bh: "Bahrain", bi: "Burundi", bj: "Benin", bl: "Saint Barthélemy",
+      bm: "Bermuda", bn: "Brunei", bo: "Bolivia", bq: "Caribbean Netherlands", br: "Brazil", bs: "Bahamas",
+      bt: "Bhutan", bv: "Bouvet Island", bw: "Botswana", by: "Belarus", bz: "Belize", ca: "Canada",
+      cc: "Cocos (Keeling) Islands", cd: "DR Congo", cf: "Central African Republic", cg: "Republic of the Congo",
+      ch: "Switzerland", ci: "Côte d'Ivoire", ck: "Cook Islands", cl: "Chile", cm: "Cameroon", cn: "China",
+      co: "Colombia", cr: "Costa Rica", cu: "Cuba", cv: "Cabo Verde", cw: "Curaçao", cx: "Christmas Island",
+      cy: "Cyprus", cz: "Czechia", de: "Germany", dj: "Djibouti", dk: "Denmark", dm: "Dominica",
+      do: "Dominican Republic", dz: "Algeria", ec: "Ecuador", ee: "Estonia", eg: "Egypt", eh: "Western Sahara",
+      er: "Eritrea", es: "Spain", et: "Ethiopia", fi: "Finland", fj: "Fiji", fk: "Falkland Islands",
+      fm: "Micronesia", fo: "Faroe Islands", fr: "France", ga: "Gabon", gb: "United Kingdom", gd: "Grenada",
+      ge: "Georgia", gf: "French Guiana", gg: "Guernsey", gh: "Ghana", gi: "Gibraltar", gl: "Greenland",
+      gm: "Gambia", gn: "Guinea", gp: "Guadeloupe", gq: "Equatorial Guinea", gr: "Greece", gs: "South Georgia",
+      gt: "Guatemala", gu: "Guam", gw: "Guinea-Bissau", gy: "Guyana", hk: "Hong Kong", hm: "Heard & McDonald Is.",
+      hn: "Honduras", hr: "Croatia", ht: "Haiti", hu: "Hungary", id: "Indonesia", ie: "Ireland", il: "Israel",
+      im: "Isle of Man", in: "India", io: "British Indian Ocean Territory", iq: "Iraq", ir: "Iran", is: "Iceland",
+      it: "Italy", je: "Jersey", jm: "Jamaica", jo: "Jordan", jp: "Japan", ke: "Kenya", kg: "Kyrgyzstan",
+      kh: "Cambodia", ki: "Kiribati", km: "Comoros", kn: "Saint Kitts and Nevis", kp: "North Korea",
+      kr: "South Korea", kw: "Kuwait", ky: "Cayman Islands", kz: "Kazakhstan", la: "Laos", lb: "Lebanon",
+      lc: "Saint Lucia", li: "Liechtenstein", lk: "Sri Lanka", lr: "Liberia", ls: "Lesotho", lt: "Lithuania",
+      lu: "Luxembourg", lv: "Latvia", ly: "Libya", ma: "Morocco", mc: "Monaco", md: "Moldova",
+      me: "Montenegro", mf: "Saint Martin", mg: "Madagascar", mh: "Marshall Islands", mk: "North Macedonia",
+      ml: "Mali", mm: "Myanmar", mn: "Mongolia", mo: "Macau", mp: "Northern Mariana Islands",
+      mq: "Martinique", mr: "Mauritania", ms: "Montserrat", mt: "Malta", mu: "Mauritius", mv: "Maldives",
+      mw: "Malawi", mx: "Mexico", my: "Malaysia", mz: "Mozambique", na: "Namibia", nc: "New Caledonia",
+      ne: "Niger", nf: "Norfolk Island", ng: "Nigeria", ni: "Nicaragua", nl: "Netherlands", no: "Norway",
+      np: "Nepal", nr: "Nauru", nu: "Niue", nz: "New Zealand", om: "Oman", pa: "Panama", pe: "Peru",
+      pf: "French Polynesia", pg: "Papua New Guinea", ph: "Philippines", pk: "Pakistan", pl: "Poland",
+      pm: "Saint Pierre and Miquelon", pn: "Pitcairn Islands", pr: "Puerto Rico", ps: "Palestine", pt: "Portugal",
+      pw: "Palau", py: "Paraguay", qa: "Qatar", re: "Réunion", ro: "Romania", rs: "Serbia", ru: "Russia",
+      rw: "Rwanda", sa: "Saudi Arabia", sb: "Solomon Islands", sc: "Seychelles", sd: "Sudan", se: "Sweden",
+      sg: "Singapore", sh: "Saint Helena", si: "Slovenia", sj: "Svalbard and Jan Mayen", sk: "Slovakia",
+      sl: "Sierra Leone", sm: "San Marino", sn: "Senegal", so: "Somalia", sr: "Suriname", ss: "South Sudan",
+      st: "Sao Tome and Principe", sv: "El Salvador", sx: "Sint Maarten", sy: "Syria", sz: "Eswatini",
+      tc: "Turks and Caicos Islands", td: "Chad", tf: "French Southern Territories", tg: "Togo", th: "Thailand",
+      tj: "Tajikistan", tk: "Tokelau", tl: "Timor-Leste", tm: "Turkmenistan", tn: "Tunisia", to: "Tonga",
+      tr: "Turkey", tt: "Trinidad and Tobago", tv: "Tuvalu", tw: "Taiwan", tz: "Tanzania", ua: "Ukraine",
+      ug: "Uganda", um: "US Outlying Islands", us: "United States", uy: "Uruguay", uz: "Uzbekistan",
+      va: "Vatican City", vc: "Saint Vincent and the Grenadines", ve: "Venezuela", vg: "British Virgin Islands",
+      vi: "U.S. Virgin Islands", vn: "Vietnam", vu: "Vanuatu", wf: "Wallis and Futuna", ws: "Samoa",
+      xk: "Kosovo", ye: "Yemen", yt: "Mayotte", za: "South Africa", zm: "Zambia", zw: "Zimbabwe"
+    };
 
-    const flagCodes = [
-      "ad", "ae", "af", "ag", "ai", "al", "am", "ao", "aq", "ar", "as", "at", "au", "aw", "ax", "az", "ba", "bb",
-      "bd", "be", "bf", "bg", "bh", "bi", "bj", "bl", "bm", "bn", "bo", "bq", "br", "bs", "bt", "bv", "bw", "by", "bz",
-      "ca", "cc", "cd", "cf", "cg", "ch", "ci", "ck", "cl", "cm", "cn", "co", "cr", "cu", "cv", "cw", "cx", "cy", "cz", "de",
-      "dj", "dk", "dm", "do", "dz", "ec", "ee", "eg", "eh", "er", "es", "et", "fi", "fj", "fk", "fm", "fo", "fr", "ga", "gb",
-      "gd", "ge", "gf", "gg", "gh", "gi", "gl", "gm", "gn", "gp", "gq", "gr", "gs", "gt", "gu", "gw", "gy", "hk", "hm", "hn",
-      "hr", "ht", "hu", "id", "ie", "il", "im", "in", "io", "iq", "ir", "is", "it", "je", "jm", "jo", "jp", "ke", "kg", "kh",
-      "ki", "km", "kn", "kp", "kr", "kw", "ky", "kz", "la", "lb", "lc", "li", "lk", "lr", "ls", "lt", "lu", "lv", "ly", "ma",
-      "mc", "md", "me", "mf", "mg", "mh", "mk", "ml", "mm", "mn", "mo", "mp", "mq", "mr", "ms", "mt", "mu", "mv", "mw", "mx",
-      "my", "mz", "na", "nc", "ne", "nf", "ng", "ni", "nl", "no", "np", "nr", "nu", "nz", "om", "pa", "pe", "pf", "pg", "ph",
-      "pk", "pl", "pm", "pn", "pr", "ps", "pt", "pw", "py", "qa", "re", "ro", "rs", "ru", "rw", "sa", "sb", "sc", "sd", "se",
-      "sg", "sh", "si", "sj", "sk", "sl", "sm", "sn", "so", "sr", "ss", "st", "sv", "sx", "sy", "sz", "tc", "td", "tf", "tg",
-      "th", "tj", "tk", "tl", "tm", "tn", "to", "tr", "tt", "tv", "tw", "tz", "ua", "ug", "um", "us", "uy", "uz", "va", "vc",
-      "ve", "vg", "vi", "vn", "vu", "wf", "ws", "xk", "ye", "yt", "za", "zm", "zw"
-    ];
-
-    let score = 0;
-    let currentAnswer = '';
-
-    function showMenu() {
-      document.getElementById('menu').style.display = 'block';
-      document.getElementById('game').style.display = 'none';
-      document.getElementById('result').innerText = '';
-    }
-
-    function startGame(mode) {
-      document.getElementById('menu').style.display = 'none';
-      document.getElementById('game').style.display = 'block';
-      nextQuestion(mode);
-    }
-
-    function nextQuestion(mode) {
-      let questionText = '', options = [], correctAnswer = '';
-      if (mode === 'flags') {
-        const correctCode = flagCodes[Math.floor(Math.random() * flagCodes.length)];
-        correctAnswer = correctCode;
-        document.getElementById('flag-image').src = `flags/${correctCode}.png`;
-        document.getElementById('flag-image').style.display = 'block';
-        questionText = 'Which country does this flag belong to?';
-        options = shuffleArray([
-          correctCode,
-          ...shuffleArray(flagCodes.filter(code => code !== correctCode)).slice(0, 3)
-        ]);
-        currentAnswer = correctCode;
-      }
-
-      document.getElementById('question').innerText = questionText;
-      const optionsDiv = document.getElementById('options');
-      optionsDiv.innerHTML = '';
-      options.forEach(option => {
-        const btn = document.createElement('button');
-        btn.className = 'option-btn';
-        btn.innerText = option.toUpperCase();
-        btn.onclick = () => checkAnswer(option);
-        optionsDiv.appendChild(btn);
-      });
-    }
-
-    function checkAnswer(choice) {
-      if (choice === currentAnswer) {
-        document.getElementById('result').innerText = 'Correct!';
-        score += 5;
-      } else {
-        document.getElementById('result').innerText = `Wrong! Answer was ${currentAnswer.toUpperCase()}`;
-      }
-      document.getElementById('score').innerText = score;
-      setTimeout(() => nextQuestion('flags'), 1500);
-    }
-
-    function shuffleArray(arr) {
-      let a = [...arr];
-      for (let i = a.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [a[i], a[j]] = [a[j], a[i]];
-      }
-      return a;
-    }
+    // Additional JavaScript logic for flag randomization and quiz rendering would use this object
   </script>
 </body>
 
