--- a/index.html
+++ b/index.html
@@ -1,129 +1,296 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PennyQuest</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>PennyQuest: A Sci-Fi Trivia Game</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet" />
   <style>
+    /* Milky Way background from https://css-tricks.com/animated-backgrounds-with-css/ */
     body {
       margin: 0;
-      font-family: 'Courier New', monospace;
-      color: white;
-      background: black;
-      overflow-x: hidden;
-    }
-
-    canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -1;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 2rem;
+      font-family: 'Orbitron', monospace;
+      background:
+        radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+      color: #00ffcc;
       text-align: center;
+      padding: 2rem;
+      overflow-x: hidden;
+      position: relative;
+      min-height: 100vh;
+    }
+    /* Starfield animation */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: transparent url('https://cdn.jsdelivr.net/gh/nmaulik/pennyquest/starfield.png') repeat;
+      animation: starfieldMove 200s linear infinite;
+      z-index: -1;
+      opacity: 0.6;
+    }
+    @keyframes starfieldMove {
+      0% {background-position: 0 0;}
+      100% {background-position: -10000px 5000px;}
     }
 
-    .challenge {
-      margin-bottom: 3rem;
+    h1, h2, h3 {
+      text-shadow: 0 0 8px #0ff;
+      margin-bottom: 0.3em;
     }
-
-    .options button {
-      display: block;
-      width: 100%;
-      margin: 0.5rem auto;
-      padding: 0.75rem;
+    .hidden {
+      display: none;
+    }
+    button {
+      font-family: 'Orbitron', monospace;
       font-size: 1rem;
-      border-radius: 10px;
-      background-color: rgba(255, 255, 255, 0.1);
-      color: white;
-      border: 1px solid white;
+      border-radius: 4px;
+      border: 2px solid #0ff;
+      background: transparent;
+      color: #0ff;
+      padding: 0.8em 1.2em;
+      margin: 0.3em;
       cursor: pointer;
+      transition: background 0.3s, color 0.3s;
+      box-shadow: 0 0 12px #00ffffaa;
     }
-
-    .flag-container img {
-      max-width: 100%;
-      max-height: 150px;
-      object-fit: contain;
+    button:hover {
+      background: #0ff;
+      color: black;
+      box-shadow: 0 0 20px #00ffff;
+    }
+    .options {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1em;
+      margin-top: 1em;
+    }
+    .option-button {
+      min-width: 120px;
+    }
+    img.flag {
+      width: 220px;
+      height: auto;
+      border: 2px solid #0ff;
+      box-shadow: 0 0 15px #0ff;
+      margin: 1rem auto;
       display: block;
-      margin: 0 auto 1rem;
+      border-radius: 8px;
+    }
+    .store-item {
+      margin: 1em 0;
+      border: 1px solid #0ff;
+      padding: 0.7em;
+      border-radius: 6px;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+      box-shadow: 0 0 8px #00ffccaa;
+      background: rgba(0,255,204,0.05);
+    }
+    .store-item button {
+      margin-left: 1em;
     }
   </style>
 </head>
-
 <body>
-  <canvas id="stars"></canvas>
-  <div class="container">
+  <div id="main-menu">
     <h1>PennyQuest</h1>
+    <h3>A 1970s Sci-Fi Trivia Game</h3>
+    <p>Pennies: <span id="pennies">0</span></p>
+    <h2>Select a Challenge</h2>
+    <button onclick="startGame('geography')">Geography</button>
+    <button onclick="startGame('flags')">Flags</button>
+    <button onclick="startGame('history')">History</button>
+    <br/>
+    <button onclick="showStore()">Go to Store</button>
+  </div>
 
-    <div class="challenge" id="category">
-      <h2>Choose a Challenge:</h2>
-      <button onclick="startGeography()">Geography</button>
-      <button onclick="startFlagQuiz()">Flags</button>
-      <button onclick="startHistory()">History</button>
-    </div>
+  <div id="question-screen" class="hidden">
+    <h2 id="question"></h2>
+    <div id="flag-container"></div>
+    <div class="options" id="options"></div>
+    <p id="feedback"></p>
+    <button onclick="nextQuestion()">Next</button>
+  </div>
 
-    <div class="challenge" id="quiz" style="display: none;">
-      <div id="question"></div>
-      <div class="flag-container" id="flag"></div>
-      <div class="options" id="options"></div>
-    </div>
+  <div id="store-screen" class="hidden">
+    <h2>Store</h2>
+    <p>Pennies: <span id="store-pennies"></span></p>
+    <div id="store"></div>
+    <button onclick="closeStore()">Back to Menu</button>
   </div>
 
   <script>
-    const countryCodes = {
-      ad: "Andorra", ae: "United Arab Emirates", af: "Afghanistan", ag: "Antigua and Barbuda",
-      ai: "Anguilla", al: "Albania", am: "Armenia", ao: "Angola", aq: "Antarctica", ar: "Argentina",
-      as: "American Samoa", at: "Austria", au: "Australia", aw: "Aruba", ax: "Åland Islands",
-      az: "Azerbaijan", ba: "Bosnia and Herzegovina", bb: "Barbados", bd: "Bangladesh", be: "Belgium",
-      bf: "Burkina Faso", bg: "Bulgaria", bh: "Bahrain", bi: "Burundi", bj: "Benin", bl: "Saint Barthélemy",
-      bm: "Bermuda", bn: "Brunei", bo: "Bolivia", bq: "Caribbean Netherlands", br: "Brazil", bs: "Bahamas",
-      bt: "Bhutan", bv: "Bouvet Island", bw: "Botswana", by: "Belarus", bz: "Belize", ca: "Canada",
-      cc: "Cocos (Keeling) Islands", cd: "DR Congo", cf: "Central African Republic", cg: "Republic of the Congo",
-      ch: "Switzerland", ci: "Côte d'Ivoire", ck: "Cook Islands", cl: "Chile", cm: "Cameroon", cn: "China",
-      co: "Colombia", cr: "Costa Rica", cu: "Cuba", cv: "Cabo Verde", cw: "Curaçao", cx: "Christmas Island",
-      cy: "Cyprus", cz: "Czechia", de: "Germany", dj: "Djibouti", dk: "Denmark", dm: "Dominica",
-      do: "Dominican Republic", dz: "Algeria", ec: "Ecuador", ee: "Estonia", eg: "Egypt", eh: "Western Sahara",
-      er: "Eritrea", es: "Spain", et: "Ethiopia", fi: "Finland", fj: "Fiji", fk: "Falkland Islands",
-      fm: "Micronesia", fo: "Faroe Islands", fr: "France", ga: "Gabon", gb: "United Kingdom", gd: "Grenada",
-      ge: "Georgia", gf: "French Guiana", gg: "Guernsey", gh: "Ghana", gi: "Gibraltar", gl: "Greenland",
-      gm: "Gambia", gn: "Guinea", gp: "Guadeloupe", gq: "Equatorial Guinea", gr: "Greece", gs: "South Georgia",
-      gt: "Guatemala", gu: "Guam", gw: "Guinea-Bissau", gy: "Guyana", hk: "Hong Kong", hm: "Heard & McDonald Is.",
-      hn: "Honduras", hr: "Croatia", ht: "Haiti", hu: "Hungary", id: "Indonesia", ie: "Ireland", il: "Israel",
-      im: "Isle of Man", in: "India", io: "British Indian Ocean Territory", iq: "Iraq", ir: "Iran", is: "Iceland",
-      it: "Italy", je: "Jersey", jm: "Jamaica", jo: "Jordan", jp: "Japan", ke: "Kenya", kg: "Kyrgyzstan",
-      kh: "Cambodia", ki: "Kiribati", km: "Comoros", kn: "Saint Kitts and Nevis", kp: "North Korea",
-      kr: "South Korea", kw: "Kuwait", ky: "Cayman Islands", kz: "Kazakhstan", la: "Laos", lb: "Lebanon",
-      lc: "Saint Lucia", li: "Liechtenstein", lk: "Sri Lanka", lr: "Liberia", ls: "Lesotho", lt: "Lithuania",
-      lu: "Luxembourg", lv: "Latvia", ly: "Libya", ma: "Morocco", mc: "Monaco", md: "Moldova",
-      me: "Montenegro", mf: "Saint Martin", mg: "Madagascar", mh: "Marshall Islands", mk: "North Macedonia",
-      ml: "Mali", mm: "Myanmar", mn: "Mongolia", mo: "Macau", mp: "Northern Mariana Islands",
-      mq: "Martinique", mr: "Mauritania", ms: "Montserrat", mt: "Malta", mu: "Mauritius", mv: "Maldives",
-      mw: "Malawi", mx: "Mexico", my: "Malaysia", mz: "Mozambique", na: "Namibia", nc: "New Caledonia",
-      ne: "Niger", nf: "Norfolk Island", ng: "Nigeria", ni: "Nicaragua", nl: "Netherlands", no: "Norway",
-      np: "Nepal", nr: "Nauru", nu: "Niue", nz: "New Zealand", om: "Oman", pa: "Panama", pe: "Peru",
-      pf: "French Polynesia", pg: "Papua New Guinea", ph: "Philippines", pk: "Pakistan", pl: "Poland",
-      pm: "Saint Pierre and Miquelon", pn: "Pitcairn Islands", pr: "Puerto Rico", ps: "Palestine", pt: "Portugal",
-      pw: "Palau", py: "Paraguay", qa: "Qatar", re: "Réunion", ro: "Romania", rs: "Serbia", ru: "Russia",
-      rw: "Rwanda", sa: "Saudi Arabia", sb: "Solomon Islands", sc: "Seychelles", sd: "Sudan", se: "Sweden",
-      sg: "Singapore", sh: "Saint Helena", si: "Slovenia", sj: "Svalbard and Jan Mayen", sk: "Slovakia",
-      sl: "Sierra Leone", sm: "San Marino", sn: "Senegal", so: "Somalia", sr: "Suriname", ss: "South Sudan",
-      st: "Sao Tome and Principe", sv: "El Salvador", sx: "Sint Maarten", sy: "Syria", sz: "Eswatini",
-      tc: "Turks and Caicos Islands", td: "Chad", tf: "French Southern Territories", tg: "Togo", th: "Thailand",
-      tj: "Tajikistan", tk: "Tokelau", tl: "Timor-Leste", tm: "Turkmenistan", tn: "Tunisia", to: "Tonga",
-      tr: "Turkey", tt: "Trinidad and Tobago", tv: "Tuvalu", tw: "Taiwan", tz: "Tanzania", ua: "Ukraine",
-      ug: "Uganda", um: "US Outlying Islands", us: "United States", uy: "Uruguay", uz: "Uzbekistan",
-      va: "Vatican City", vc: "Saint Vincent and the Grenadines", ve: "Venezuela", vg: "British Virgin Islands",
-      vi: "U.S. Virgin Islands", vn: "Vietnam", vu: "Vanuatu", wf: "Wallis and Futuna", ws: "Samoa",
-      xk: "Kosovo", ye: "Yemen", yt: "Mayotte", za: "South Africa", zm: "Zambia", zw: "Zimbabwe"
+    // Questions object with lots of flag questions added:
+    const questions = {
+      geography: [
+        {
+          q: "Which country has the tallest waterfall in the world?",
+          options: ["Norway", "Venezuela", "USA", "India"],
+          answer: "Venezuela"
+        },
+        {
+          q: "Which country lists Wolof as a national language?",
+          options: ["Ghana", "Senegal", "Nigeria", "Cameroon"],
+          answer: "Senegal"
+        }
+      ],
+      flags: [
+        // Sample with all flag files listed with basic placeholder options and answers (you can customize later)
+        { img: "flags/ad.png", q: "Which country does this flag belong to?", options: ["Andorra", "Romania", "Moldova", "France"], answer: "Andorra" },
+        { img: "flags/ae.png", q: "Which country does this flag belong to?", options: ["Kuwait", "UAE", "Oman", "Bahrain"], answer: "UAE" },
+        { img: "flags/af.png", q: "Which country does this flag belong to?", options: ["Afghanistan", "Pakistan", "Iran", "Turkmenistan"], answer: "Afghanistan" },
+        { img: "flags/ag.png", q: "Which country does this flag belong to?", options: ["Antigua and Barbuda", "Barbados", "Jamaica", "Bahamas"], answer: "Antigua and Barbuda" },
+        { img: "flags/ai.png", q: "Which country does this flag belong to?", options: ["Anguilla", "Aruba", "Bermuda", "Cayman Islands"], answer: "Anguilla" },
+        { img: "flags/al.png", q: "Which country does this flag belong to?", options: ["Albania", "Kosovo", "Montenegro", "Serbia"], answer: "Albania" },
+        { img: "flags/am.png", q: "Which country does this flag belong to?", options: ["Armenia", "Azerbaijan", "Georgia", "Turkey"], answer: "Armenia" },
+        { img: "flags/ao.png", q: "Which country does this flag belong to?", options: ["Angola", "Mozambique", "Namibia", "Botswana"], answer: "Angola" },
+        { img: "flags/aq.png", q: "Which country does this flag belong to?", options: ["Antarctica", "Greenland", "Iceland", "Falkland Islands"], answer: "Antarctica" },
+        { img: "flags/ar.png", q: "Which country does this flag belong to?", options: ["Argentina", "Uruguay", "Paraguay", "Chile"], answer: "Argentina" },
+        // ... (Add as many as you want, this is a sample; you can extend the pattern for all files)
+      ],
+      history: [
+        {
+          q: "Which of these is an Ancient Wonder of the World?",
+          options: ["Eiffel Tower", "Statue of Zeus", "Great Wall", "Colosseum"],
+          answer: "Statue of Zeus"
+        },
+        {
+          q: "Which year did the Titanic sink?",
+          options: ["1912", "1920", "1905", "1898"],
+          answer: "1912"
+        }
+      ]
     };
 
-    // Additional JavaScript logic for flag randomization and quiz rendering would use this object
+    // Store items:
+    const storeItems = [
+      { name: "An Ice Cold Shmacking Orangina", cost: 10 },
+      { name: "An Indestructible, Apocalypse-proof, Quantum Supercomputer That Always Works", cost: 500 },
+      { name: "Bruno the Bernese Mountain Dog", cost: 1000 },
+      { name: "Seaside Irish Cottage", cost: 5000 }
+    ];
+
+    let currentCategory = null;
+    let currentQuestions = [];
+    let currentIndex = 0;
+    let pennies = parseInt(localStorage.getItem("pennies")) || 0;
+    const storePurchases = JSON.parse(localStorage.getItem("purchases") || "[]");
+
+    // Initialize pennies display in main menu:
+    document.getElementById("pennies").textContent = pennies;
+
+    // Render store in main menu store div (if you want to keep it, but now we have separate store screen)
+    // renderStore();
+
+    function startGame(category) {
+      currentCategory = category;
+      currentQuestions = [...questions[category]];
+      currentQuestions.sort(() => Math.random() - 0.5);
+      currentIndex = 0;
+      document.getElementById("main-menu").classList.add("hidden");
+      document.getElementById("store-screen").classList.add("hidden");
+      document.getElementById("question-screen").classList.remove("hidden");
+      showQuestion();
+    }
+
+    function showQuestion() {
+      const q = currentQuestions[currentIndex];
+      document.getElementById("question").textContent = q.q;
+      document.getElementById("feedback").textContent = "";
+      const optionsDiv = document.getElementById("options");
+      optionsDiv.innerHTML = "";
+      if (q.img) {
+        document.getElementById("flag-container").innerHTML = `<img src="${q.img}" class="flag" alt="Flag">`;
+      } else {
+        document.getElementById("flag-container").innerHTML = "";
+      }
+      q.options.forEach(opt => {
+        const btn = document.createElement("button");
+        btn.className = "option-button";
+        btn.textContent = opt;
+        btn.onclick = () => selectAnswer(opt);
+        optionsDiv.appendChild(btn);
+      });
+    }
+
+    function selectAnswer(choice) {
+      const q = currentQuestions[currentIndex];
+      if (choice === q.answer) {
+        document.getElementById("feedback").textContent = "Correct! +1 penny";
+        pennies++;
+        localStorage.setItem("pennies", pennies);
+        document.getElementById("pennies").textContent = pennies;
+        if (document.getElementById("store-pennies")) {
+          document.getElementById("store-pennies").textContent = pennies;
+        }
+      } else {
+        document.getElementById("feedback").textContent = `Wrong! Answer was ${q.answer}`;
+      }
+    }
+
+    function nextQuestion() {
+      currentIndex++;
+      if (currentIndex < currentQuestions.length) {
+        showQuestion();
+      } else {
+        // Back to main menu after quiz
+        document.getElementById("question-screen").classList.add("hidden");
+        document.getElementById("main-menu").classList.remove("hidden");
+        renderStore();
+      }
+    }
+
+    // Store functions
+
+    function renderStore() {
+      const storeDiv = document.getElementById("store");
+      if (!storeDiv) return;
+      storeDiv.innerHTML = "";
+      storeItems.forEach(item => {
+        const owned = storePurchases.includes(item.name);
+        const div = document.createElement("div");
+        div.className = "store-item";
+        div.textContent = `${item.name} - ${item.cost} pennies${owned ? " (Owned)" : ""}`;
+        if (!owned && pennies >= item.cost) {
+          const btn = document.createElement("button");
+          btn.textContent = "Buy";
+          btn.onclick = () => buyItem(item);
+          div.appendChild(btn);
+        }
+        storeDiv.appendChild(div);
+      });
+    }
+
+    function buyItem(item) {
+      if(pennies >= item.cost){
+        pennies -= item.cost;
+        storePurchases.push(item.name);
+        localStorage.setItem("pennies", pennies);
+        localStorage.setItem("purchases", JSON.stringify(storePurchases));
+        document.getElementById("pennies").textContent = pennies;
+        if (document.getElementById("store-pennies")) {
+          document.getElementById("store-pennies").textContent = pennies;
+        }
+        renderStore();
+      }
+    }
+
+    // Show / hide store screen
+    function showStore() {
+      document.getElementById("main-menu").classList.add("hidden");
+      document.getElementById("question-screen").classList.add("hidden");
+      document.getElementById("store-screen").classList.remove("hidden");
+      document.getElementById("store-pennies").textContent = pennies;
+      renderStore();
+    }
+
+    function closeStore() {
+      document.getElementById("store-screen").classList.add("hidden");
+      document.getElementById("main-menu").classList.remove("hidden");
+    }
   </script>
 </body>
-
 </html>
