--- a/index.html
+++ b/index.html
@@ -8,31 +8,75 @@
   <style>
     /* Milky Way background from https://css-tricks.com/animated-backgrounds-with-css/ */
     body {
-      margin: 0;
-      font-family: 'Orbitron', monospace;
-      background:
-        radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-      color: #00ffcc;
-      text-align: center;
-      padding: 2rem;
-      overflow-x: hidden;
-      position: relative;
-      min-height: 100vh;
-    }
-    /* Starfield animation */
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: transparent url('https://cdn.jsdelivr.net/gh/nmaulik/pennyquest/starfield.png') repeat;
-      animation: starfieldMove 200s linear infinite;
-      z-index: -1;
-      opacity: 0.6;
-    }
-    @keyframes starfieldMove {
-      0% {background-position: 0 0;}
-      100% {background-position: -10000px 5000px;}
-    }
+  margin: 0;
+  font-family: 'Orbitron', monospace;
+  background: radial-gradient(ellipse at bottom, #0b0c1c 0%, #000010 100%);
+  color: #00ffcc;
+  text-align: center;
+  padding: 2rem;
+  overflow-x: hidden;
+  position: relative;
+  min-height: 100vh;
+  /* Make sure layers stack */
+  z-index: 0;
+}
+
+/* Star layers with different sizes and speeds */
+body::before, body::after {
+  content: "";
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  pointer-events: none;
+  z-index: -1;
+}
+
+/* Distant small stars */
+body::before {
+  background:
+    radial-gradient(2px 2px at 10% 20%, #fff, transparent),
+    radial-gradient(1.5px 1.5px at 30% 40%, #fff, transparent),
+    radial-gradient(2px 2px at 70% 80%, #fff, transparent),
+    radial-gradient(1px 1px at 50% 90%, #fff, transparent),
+    radial-gradient(1.5px 1.5px at 80% 15%, #fff, transparent);
+  background-repeat: repeat;
+  background-size: 200px 200px;
+  animation: starsSlow 120s linear infinite;
+  opacity: 0.7;
+}
+
+/* Closer twinkling stars */
+body::after {
+  background:
+    radial-gradient(3px 3px at 15% 25%, #aaffff, transparent),
+    radial-gradient(2.5px 2.5px at 35% 45%, #aaffff, transparent),
+    radial-gradient(3px 3px at 75% 85%, #aaffff, transparent),
+    radial-gradient(2px 2px at 55% 95%, #aaffff, transparent),
+    radial-gradient(2.5px 2.5px at 85% 20%, #aaffff, transparent);
+  background-repeat: repeat;
+  background-size: 150px 150px;
+  animation: starsFast 60s linear infinite alternate;
+  opacity: 0.8;
+}
+
+/* Nebula glow effect behind everything */
+body::before {
+  box-shadow:
+    inset 0 0 150px 60px #002233,
+    inset 0 0 200px 100px #004466;
+  mix-blend-mode: screen;
+}
+
+/* Animations */
+@keyframes starsSlow {
+  from {background-position: 0 0;}
+  to {background-position: 1000px 1000px;}
+}
+
+@keyframes starsFast {
+  from {background-position: 0 0;}
+  to {background-position: -1000px -1000px;}
+}
+
 
     h1, h2, h3 {
       text-shadow: 0 0 8px #0ff;
