--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ body::before {
       { name: "An Indestructible, Apocalypse-proof, Quantum Supercomputer That Always Works", cost: 500 },
       { name: "A Perfectly Purple Porsche 911 Turbo", cost: 1000 }
       { name: "Seaside Irish Cottage", cost: 5000 }
-      { name: "The Answer to the Ultimate Question of Life, the Universe, and Everything" cost: 42000 }
+      { name: "The Answer to the Ultimate Question of Life, the Universe, and Everything", cost: 42000 }
     ];
 
     let currentCategory = null;
