--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@ body::before {
       { name: "An Ice Cold Shmacking Orangina", cost: 10 },
       { name: "Bruno the Bernese Mountain Dog", cost: 100 },
       { name: "An Indestructible, Apocalypse-proof, Quantum Supercomputer That Always Works", cost: 500 },
-      { name: "A Perfectly Purple Porsche 911 Turbo", cost: 1000 }
-      { name: "Seaside Irish Cottage", cost: 5000 }
+      { name: "A Perfectly Purple Porsche 911 Turbo", cost: 1000 },
+      { name: "Seaside Irish Cottage", cost: 5000 },
       { name: "The Answer to the Ultimate Question of Life, the Universe, and Everything", cost: 42000 }
     ];
 
